--- a/public/index.css
+++ b/public/index.css
@@ -73,110 +73,53 @@ input{
 }
 
 /* ----- Chat inferior derecha ----- */
-.chat{
-    position: absolute;
-    height: 300px;
-    width: 225px;
-    background-color: rgb(255, 255, 255);
-    bottom:0px;
-    right:0px;
-    border-style:solid;
-    border-width:thin;
-    border-color: rgb(97, 92, 92);
-    padding: 28px 0 0 0;
 
-    }
-
-div#user-name{
+#Chat2{
+    width: 250px;
     position: absolute;
-    height: 20px;
-    width:94%;
-    top: 0%;
-    left: 0%;
-    color: white;
-    padding: 7px;    
-    background-color: rgb(104, 98, 98);
-    
+    right: 0;
+    bottom: 0;
+    border: 1px solid #ddd;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    border-radius: 2px;
+    background: #666;
 }
 
-div#user-name p#UserNameChat{
-    size:2% ;
-    margin: 0;
+div#Chat2 h2{
+    font-size: 15px;
+    padding: 0px 20px;
+    color: #ffffff;
 }
 
-.button{
-    position: absolute;
-    height: 24px;
-    width: 20%;
-    top: 0%;
-    right: 0%;
-    color: white;
-    margin: 5px;
-}
-
-#minimize{
-    height: 100%;
-    width: 100%;
-    margin: auto;
-    position: absolute;
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-    color: white;
-    text-align:"center";
-    
-}
-
-.chat-chat-window2{
-    position: relative;
+#chat-window2{
+    height: 400px;
     overflow: auto;
-    height: 267px;
-    width: 90%;
-    background-color: rgb(255, 255, 255);
-    top: 10.5%;
-    left: 0%;
-    margin: 5%;
-    border-color: rgb(97, 92, 92);
-
+    background: #f9f9f9;
 }
 
-input#Mensaje2 {
-    position: absolute;
-    bottom: 0px;    
-    left: 0px;    
-    height: 30px;
-    width: 180px;
-    z-index: 99;
-    background: #fafafa;
-    border: 2px;
-    outline: none;
-    border-style:solid;
-    border-width:thin;
-    color: #666;
-    font-weight: 400;
-    padding: 0;
-}
-
-#Enviar2{
-    position: absolute;
-    height: 30px;
-    width: 20%;
-    bottom: 0%;
-    right: 0%;
-    color: white;
-    
-}
-
-div#output2 p{
-    padding: 3px 0px;
+#output2 p{
+    padding: 14px 0px;
+    margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     color: #555;
 }
 
-button#Enviar2 i.material-icons{
-    font-size:20px;
-    color:#666;
+#feedback2 p{
+    color: #aaa;
+    padding: 14px 0px;
+    margin: 0 20px;
+}
 
+input#Mensaje2[type="text"]{
+    position: absolute;
+    width: 210px;
+    height: 33px;
+    bottom: 0px;    
+    left: 0px;
+    border: 1px solid #666;
+}
+button#Enviar2{
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
 }
